# statistix

./: README.md  dune-project  stat_lang.opam
.github/workflows/: ci.yml
_build/: .db  .digest-db  log
_build/.promotion-staging/test/: test.ml
_build/.sandbox/529c717bb12ff503926f13e7bb918621/default/test/: test.ml
_build/default/: META.statistix  README.md  stat_lang.dune-package  stat_lang.install  stat_lang.opam  statistix.dune-package  statistix.install  statistix.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/lib/: stat_lang.cma  stat_lang.cmxa  stat_lang.cmxs
_build/default/lib/.formatted/: dune
_build/default/lib/.merlin-conf/: lib-stat_lang
_build/default/lib/.stat_lang.objs/byte/: stat_lang.cmi  stat_lang.cmo  stat_lang.cmt
_build/default/lib/.stat_lang.objs/native/: stat_lang.cmx
_build/default/src/: ast.ml  interpreter.cma  interpreter.cmxa  interpreter.cmxs  interpreter.ml  interpreter__.ml-gen  lexer.ml  lexer.mll  main.ml  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred
_build/default/src/.interpreter.objs/: interpreter.impl.all-deps  interpreter.impl.d  interpreter__Lexer.impl.all-deps  interpreter__Parser.impl.all-deps
_build/default/src/.interpreter.objs/byte/: interpreter.cmi  interpreter.cmo  interpreter.cmt  interpreter__.cmi  interpreter__.cmo  interpreter__.cmt  interpreter__Ast.cmi  interpreter__Ast.cmo  interpreter__Ast.cmt  interpreter__Lexer.cmi  interpreter__Lexer.cmo  interpreter__Lexer.cmt  interpreter__Parser.cmi  interpreter__Parser.cmo  interpreter__Parser.cmt  interpreter__Parser.cmti
_build/default/src/.interpreter.objs/native/: interpreter.cmx  interpreter__.cmx  interpreter__Ast.cmx  interpreter__Lexer.cmx  interpreter__Parser.cmx
_build/default/src/.main.eobjs/byte/: dune__exe__Main.cmti
_build/default/src/.merlin-conf/: exe-main  lib-stat_lang
_build/default/test/: test.cma  test.cmxa  test.cmxs  test.ml  test.pp.ml
_build/default/test/.merlin-conf/: exe-stat_lang  exe-test  lib-test
_build/default/test/.test.objs/byte/: test.cmi  test.cmo  (+1 more)
lib/: dune
src/: ast.ml  dune  interpreter.ml  lexer.mll  main.ml  parser.mly  test.stlg  test.sx
test/: dune  test.ml
(+46 files in other folders)
