(menhir
 (modules parser))

(ocamllex lexer)

(executable
 (public_name statistix)
 (name main)
 (libraries statistix)
 (modules main)
 )

; (module src)

(library
 (name interpreter)
 (public_name statistix)
 ; (inline_tests)
 (modules parser lexer ast interpreter))


; ((library
;  (name statistix)
;  (public_name statistix)
;  (libraries statistix)))
